--- a/VQCTorchCUDA.ipynb
+++ b/VQCTorchCUDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0878ba8d-1c4a-43a8-8b43-71680f86c1aa",
    "metadata": {
     "scrolled": true
@@ -79,6 +79,8 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.datasets import fetch_openml\n",
     "from PIL import Image\n",
+    "\n",
+    "#nbcuwireahgf\n",
     "\n",
     "# Set device\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
